[build-system]

# delete cython/numpy if not needed
requires = ["setuptools>=61", "versioningit~=2.0", "numpy", ]
build-backend = "setuptools.build_meta"


# define project info
[project]
name = "SOURSOP"
dynamic = ["version"]
description = "Simulation analysis package for working with disordered proteins"
authors = [
    {name = "Alex Holehouse", email = "alex.holehouse@wustl.edu"}
]
license = {text = "LGPLv3"}
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "molecular dynamics",
    "intrinsically disordered proteins",
    "polymer physics",
    "simulation analysis",
    "biophysics",
    "mdtraj",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

# add in as needed
dependencies = [
        "numpy>=1.20.0",
        "scipy>=1.5.0",
        "cython",
        "mdtraj>=1.9.5",
        "pandas>=0.23.0",
        "threadpoolctl>=2.2.0",
        "natsort",
        "matplotlib",
]

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
]

[project.urls]
Homepage = "https://github.com/holehouse-lab/soursop"
Documentation = "https://soursop.readthedocs.io"
Repository = "https://github.com/holehouse-lab/soursop"
Issues = "https://github.com/holehouse-lab/soursop/issues"
Changelog = "https://github.com/holehouse-lab/soursop/blob/master/CHANGELOG.md"


[tool.ruff.lint.per-file-ignores]
# Test modules intentionally bind-and-discard values: smoke-coverage calls
# (``result = obj.method()``), ``pytest.raises(...) as exc`` contexts, and
# work-in-progress assertion stubs. These are not real "unused variable" bugs,
# so don't flag F841 in the test suite.
"soursop/tests/**" = ["F841"]


[tool.setuptools]
zip-safe = false
include-package-data = true 

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["soursop", "soursop*"]  # Discover all sub-packages inside the main package

[tool.setuptools.package-data]
soursop = [
    "py.typed"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "soursop/_version.py"